parser/tests/bad/arr06.st
% upper bound of a 'static array' must be greater than or equal to its lower bound

var arr: array 1..0 of int
